// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectCostFilter > Snapshot > matches snapshot with all filters active 1`] = `
<div
  class="space-y-4"
>
  <div
    class="flex items-center gap-3 flex-wrap"
  >
    <div
      class="flex items-center gap-2 px-4 py-2 bg-white/[0.05] rounded-xl border border-white/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-dollar-sign h-4 w-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="12"
          x2="12"
          y1="2"
          y2="22"
        />
        <path
          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
        />
      </svg>
      <span
        class="text-sm text-slate-300"
      >
        显示成本
      </span>
      <button
        aria-checked="true"
        class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 focus-visible:ring-offset-white disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-slate-900 data-[state=unchecked]:bg-slate-200 dark:focus-visible:ring-slate-300 dark:focus-visible:ring-offset-slate-950 dark:data-[state=checked]:bg-slate-50 dark:data-[state=unchecked]:bg-slate-800"
        data-state="checked"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="pointer-events-none block h-5 w-5 rounded-full bg-white shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0 dark:bg-slate-950"
          data-state="checked"
        />
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-4 py-2 bg-white/[0.05] rounded-xl border border-white/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert h-4 w-4 text-red-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <span
        class="text-sm text-slate-300"
      >
        仅超支项目
      </span>
      <button
        aria-checked="true"
        class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 focus-visible:ring-offset-white disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-slate-900 data-[state=unchecked]:bg-slate-200 dark:focus-visible:ring-slate-300 dark:focus-visible:ring-offset-slate-950 dark:data-[state=checked]:bg-slate-50 dark:data-[state=unchecked]:bg-slate-800 bg-red-500"
        data-state="checked"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="pointer-events-none block h-5 w-5 rounded-full bg-white shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0 dark:bg-slate-950"
          data-state="checked"
        />
      </button>
    </div>
    <button
      aria-autocomplete="none"
      aria-controls="radix-_r_p_"
      aria-expanded="false"
      class="flex h-10 items-center justify-between rounded-md border px-3 py-2 text-sm placeholder:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 w-48 bg-white/[0.05] border-white/10"
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <span>
            创建时间（新→旧）
          </span>
        </div>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 opacity-50"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <button
      class="items-center justify-center gap-2 text-sm font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 bg-white/[0.05] text-white border border-white/10 hover:bg-white/[0.08] hover:border-white/20 h-10 px-4 py-2 hidden sm:flex"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-funnel h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
        />
      </svg>
      筛选
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 text-sm font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 bg-white/[0.05] text-white border border-white/10 hover:bg-white/[0.08] hover:border-white/20 h-10 px-4 py-2 ml-auto"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-download h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 15V3"
        />
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <path
          d="m7 10 5 5 5-5"
        />
      </svg>
      导出Excel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 hover:bg-white/[0.05] h-8 px-3 text-xs text-slate-400 hover:text-white"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      清除筛选
    </button>
  </div>
  <div
    class="flex items-center gap-2 flex-wrap"
  >
    <span
      class="text-xs text-slate-500"
    >
      活跃筛选:
    </span>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors bg-white/5 text-slate-400 border border-white/10 text-xs"
    >
      显示成本
    </span>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors text-xs"
    >
      仅超支项目
    </span>
  </div>
</div>
`;

exports[`ProjectCostFilter > Snapshot > matches snapshot with default props 1`] = `
<div
  class="space-y-4"
>
  <div
    class="flex items-center gap-3 flex-wrap"
  >
    <div
      class="flex items-center gap-2 px-4 py-2 bg-white/[0.05] rounded-xl border border-white/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-dollar-sign h-4 w-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="12"
          x2="12"
          y1="2"
          y2="22"
        />
        <path
          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
        />
      </svg>
      <span
        class="text-sm text-slate-300"
      >
        显示成本
      </span>
      <button
        aria-checked="false"
        class="peer inline-flex h-6 w-11 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 focus-visible:ring-offset-white disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-slate-900 data-[state=unchecked]:bg-slate-200 dark:focus-visible:ring-slate-300 dark:focus-visible:ring-offset-slate-950 dark:data-[state=checked]:bg-slate-50 dark:data-[state=unchecked]:bg-slate-800"
        data-state="unchecked"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="pointer-events-none block h-5 w-5 rounded-full bg-white shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0 dark:bg-slate-950"
          data-state="unchecked"
        />
      </button>
    </div>
    <button
      class="items-center justify-center gap-2 text-sm font-medium whitespace-nowrap rounded-xl transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary/50 disabled:pointer-events-none disabled:opacity-50 bg-white/[0.05] text-white border border-white/10 hover:bg-white/[0.08] hover:border-white/20 h-10 px-4 py-2 hidden sm:flex"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-funnel h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
        />
      </svg>
      筛选
    </button>
  </div>
</div>
`;
